v02-argocd-carserv/template/service.yml
apiVersion: v1
kind: Service
metadata:
  name: car-serv-service
  namespace: car-serv
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 30080
  selector:
    app: car-serv
  sessionAffinity: None
  type: ClusterIP
