v02-argocd-carserv/template/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-serv-ingress
  namespace: car-serv
spec:
  ingressClassName: nginx
  rules:
    - host: nghianv.test
      http:
        paths:
          - backend:
              service:
                name: car-serv-service
                port:
                  number: 80
            path: /
            pathType: Prefix
